# GiperbolaBook

./: CMakeLists.txt  GiperbolaBook.sln  Messenger.sln  README.md
Client/: Client.aps  Client.rc  Client.vcxproj  Client.vcxproj.filters  Main.cpp  resource.h
Client/include/: Chat.h  Client.h  ClientApp.h  DropTarget.h  GuiEditor.h  Widgets.h
Client/src/: Chat.cpp  Client.cpp  ClientApp.cpp  DropTarget.cpp  GuiEditor.cpp  Main.cpp  Widgets.cpp
ClientTest/: CMakeLists.txt  ClientTest.cpp  ClientTest.vcxproj
GiperbolaBook/: CMakeLists.txt  GiperbolaBook.aps  GiperbolaBook.vcxproj  GiperbolaBook.vcxproj.filters  Main.cpp  resource.h
GiperbolaBook/include/: ChatEntity.hpp  ClientUI.hpp  GiperbolaBookApp.hpp  MainWindow.hpp  WelcomeWindow.hpp  Widgets.hpp
GiperbolaBook/src/: ChatEntity.cpp  ClientUI.cpp  GiperbolaBookApp.cpp  MainWindow.cpp  WelcomeWindow.cpp  Widgets.cpp
GiperbolaBook/x64/Release/: GiperbolaBook.exe.recipe  GiperbolaBook.iobj  GiperbolaBook.ipdb
GiperbolaBook/x64/Release/GiperbolaBook.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Netlib/: CMakeLists.txt  Netlib.vcxproj  Netlib.vcxproj.filters
Netlib/include/: NetLib.hpp  Protocol.hpp
Netlib/src/: NetLib.cpp
Server/: CMakeLists.txt  Main.cpp  Server.aps  Server.rc  Server.vcxproj  Server.vcxproj.filters  resource.h
Server/include/: Server.h
Server/src/: Main.cpp  Server.cpp
ServerLib/: CMakeLists.txt  ServerLib.vcxproj  ServerLib.vcxproj.filters
ServerLib/include/: Protocol.hpp  ServerLib.hpp
ServerLib/src/: ServerLib.cpp
ServerTest/: CMakeLists.txt  ServerTest.cpp  ServerTest.vcxproj
